--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@combeenation/webpack-hive-itf-to-obj-plugin",
-  "version": "0.0.1-beta.1",
+  "version": "0.0.1",
   "description": "Combeenation Webpack Hive Interface to Object Plugin",
   "main": "index.js",
   "files": [
